--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,15 @@ repos:
     hooks:
       - id: ruff-check
       - id: ruff-format
-  # - repo: local
-  #   hooks:
-  #     - id: ty
-  #       name: ty check
-  #       entry: uvx ty check .
-  #       language: python
+  - repo: local
+    hooks:
+      - id: ty
+        name: ty check
+        entry: uvx ty check . --python .venv
+        language: python
+      - id: docs
+        name: Generate Action docs
+        entry: auto-doc --filename action.yml
+        language: system
+        pass_filenames: false
+        always_run: true
