--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: Report uv.lock Changes
-description: Creates a PR comment with details of updated packages
+description: |-
+  Parses any changes to uv.lock in a Pull Request and
+  creates a PR comment with details of any new, removed, or
+  updated packages
 inputs:
   github-token:
     description: GitHub Token
@@ -19,6 +22,7 @@ runs:
         uv sync
         uv run main.py "${{ github.event.pull_request.base.sha }}" "${{ github.workspace }}" ${{ github.action_path }}/report.json
         echo report=$(cat report.json) >> "$GITHUB_OUTPUT"
+        echo
 
     - name: Post a comment to the PR
       uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
