--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,11 @@ inputs:
   github-token:
     description: GitHub Token
     required: true
+  output-format:
+    description: >-
+      The output format of the report. One of: simple, table
+    required: false
+    default: table
 outputs: {}
 runs:
   using: composite
@@ -21,9 +26,12 @@ runs:
       working-directory: ${{ github.action_path }}
       run: |
         uv sync
-        uv run main.py "${{ github.event.pull_request.base.sha }}" "${{ github.workspace }}" ${{ github.action_path }}/report.json
+        uv run main.py \
+          --base-sha "${{ github.event.pull_request.base.sha }}" \
+          --base-path "${{ github.workspace }}" \
+          --output-path ${{ github.action_path }}/report.json \
+          --output-format "${{ inputs.output-format }}"
         echo report=$(cat report.json) >> "$GITHUB_OUTPUT"
-        echo
 
     - name: Post a comment to the PR
       uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
