Update Package Description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "uv-lock-report"
 version = "0.1.0"
-description = "Add your description here"
+description = "Parse and report package changes in uv.lock."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
