chore: Add CLI tests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,9 @@ jobs:
         uses: astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41 # v7.1.2
       - name: Build
         run: uv build
+      - name: Smoke test (wheel)
+        run: uv run --isolated --no-project --with dist/*.whl test_cli_install.py
+      - name: Smoke test (source distribution)
+        run: uv run --isolated --no-project --with dist/*.tar.gz test_cli_install.py
       - name: Publish
         run: uv publish
