--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.version]
 source = "vcs"
+fallback-version = "0.0.1"
 
 [tool.hatch.metadata.hooks.vcs.urls]
 Homepage = "https://github.com/mw-root/uv-lock-report"
