--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,6 @@ fallback-version = "0.0.1"
 [tool.hatch.metadata.hooks.vcs.urls]
 Homepage = "https://github.com/mw-root/uv-lock-report"
 Source = "https://github.com/mw-root/uv-lock-report"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "./uv_lock_report/_version.py"
